k8s/clusters/glug-infra/derper/ingress-traefik.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: derper
  namespace: derper
  labels:
    app.kubernetes.io/name: derper
    app.kubernetes.io/part-of: tailnet
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`derp.tellmey.fyi`)
      kind: Rule
      services:
        - name: derper-svc
          port: 8080
          serversTransport: derper-longlived
          responseForwarding:
            flushInterval: 10ms
  tls:
    certResolver: letsencrypt
